# rust-serde-schema

serde_schema/: Cargo.toml
serde_schema/src/: serialize.rs
serde_schema_derive/: Cargo.toml
serde_schema_derive/src/: derive_enum.rs  derive_struct.rs  lib.rs
