[package]
name = "serde_schema"
version = "0.0.1"
description = "serde support for self-describing, schema-based data formats"
readme = "../README.md"
authors = ["Sam Rijs <srijs@airpost.net>"]
license = "MIT/Apache-2.0"
workspace = ".."

[dependencies]
serde = "1.0.204"
serde_bytes = { version = "0.11.15", optional = true }

[features]
bytes = ["serde_bytes"]
