[package]
name = "serde_schema_derive"
version = "0.0.1"
description = "serde support for self-describing, schema-based data formats"
readme = "../README.md"
authors = ["Sam Rijs <srijs@airpost.net>"]
license = "MIT/Apache-2.0"
workspace = ".."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
serde_derive_internals = "0.29.1"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
serde = "1.0.204"
serde_derive = "1.0.204"
serde_schema = { path = "../serde_schema" }
